--- a/homework/HW1_R_Basics.Rmd
+++ b/homework/HW1_R_Basics.Rmd
@@ -1,5 +1,6 @@
 ---
 title: "HW1: R Basics"
+Name: Stella S. Canino
 ---
 
 ## Getting Started with R
@@ -16,7 +17,12 @@ In this task, you will learn about the R programming language and write basic R 
 Put your code inside the block below, then click the green arrow to run your code.
 
 ```{r}
+x <- 1
+y <- 2
+z <- 3
 
+#just to see if it worked; made it do math.
+x + y
 ```
 
 ### 1.2: Functions
@@ -26,13 +32,13 @@ A function is code that produces some result, like printing. The function for pr
 ## Have R print Hello World
 
 ```{r}
-
+print("Hello World!")
 ```
 
 ## Have R print the number 42
 
 ```{r}
-
+print(42)
 ```
 
 ### 1.3: Computations
@@ -42,19 +48,25 @@ R can do math, too, which is very necessary for statistics. Let's have it - not 
 ## Add 17 to 5
 
 ```{r}
+17+5
 
+#22 
 ```
 
 ## Add 5 to x (remember x from above?)
 
 ```{r}
-
+5+x
+# =6
 ```
 
 ## Add 15 to 5 and store it in a variable called n
 
-```{r}
 
+```{r}
+N <- 15+5
+
+# = 20
 ```
 
 ## Find the square root of 16 and store it in a variable called p.
@@ -62,7 +74,7 @@ R can do math, too, which is very necessary for statistics. Let's have it - not 
 You'll need to look up the function to calculate a square root.
 
 ```{r}
-
+p <- sqrt(16)
 ```
 
 ## Calling variable in R
@@ -72,13 +84,13 @@ Calling variables means just typing the variable name in a code block and runnin
 Call y, see y value in console
 
 ```{r}
-
+y
 ```
 
 Call x, see x value in console
 
 ```{r}
-
+x
 ```
 
 ### 1.4: Using the Tidyverse Library
@@ -88,11 +100,9 @@ We'll be using different tools in order to work with data and generate statistic
 ## Load the tidyverse
 
 ```{r}
-
-
+#I already had tidyverse downloaded.
+library(tidyverse)
 ```
-
-
 ## Task Two: Data Structures in R: Data frames
 
 Data frames are how R stores tabular data, like a spreadsheet. In this task, you will learn how to read a CSV file into RStudio.
@@ -101,13 +111,15 @@ Data frames are how R stores tabular data, like a spreadsheet. In this task, you
 
 One thing we'll do a lot in this class is load some CSV data using the `read_csv()` function that the tidyverse provides. Follow along here: https://r4ds.hadley.nz/data-import and put the code below that loads the students.csv file from the URL provided:
 
-```{r}
+##There are 6 rows and 5 columns. 
 
+```{r}
+students1 <- read_csv("https://pos.it/r4ds-students-csv")
 ```
 
 You're done with code once you hit Section 7.2.1 on the page, but if you had trouble with or questions about any of this, please describe them below:
 
-
+N/A
 
 
 IMPORTANT: Be sure to save your work (Cmd-S or Ctrl-S will do it) 
