--- a/homework/HW2_PG_Crime.Rmd
+++ b/homework/HW2_PG_Crime.Rmd
@@ -1,5 +1,6 @@
 ---
 title: "HW2 Prince George's County Crime"
+Name: Stella S. Canino
 ---
 
 In this assignment, we will be working with a dataset reporting the number of crimes by month in Prince George's County, Maryland, for every month in 2024. 
@@ -9,7 +10,7 @@ In this assignment, we will be working with a dataset reporting the number of cr
 You will need to load the tidyverse library
 
 ```{r}
-
+library(tidyverse)
 ```
 
 Then you'll load the data from the web. The URL for the data is: https://raw.githubusercontent.com/dwillis/jour405/refs/heads/main/data/pg_crime_totals_2024.csv. You will create a dataframe called `pg_crime` that contains the data from this URL.
@@ -17,18 +18,35 @@ Then you'll load the data from the web. The URL for the data is: https://raw.git
 ### Task 2: Load the Data and Describe It
 
 ```{r}
+
+pg_crime <- read_csv("https://raw.githubusercontent.com/dwillis/jour405/refs/heads/main/data/pg_crime_totals_2024.csv")
+
 ```
 ### Task 3: Describe the Data
 
 You should examine that dataframe carefully by clicking on it in the Environment tab in RStudio. Write a couple of sentences describing the categories of incidents. From a reporting standpoint, are any of the categories more important than others? Why or why not? Do any of them make the job of summarizing the data more difficult? Why or why not?
 
-ANSWER HERE
+The dataframe describes 18 types of crimes by the months that they were reported by month. 
+The categories tend to be related to assault, robbery and theft with variations. In general,
+there are some categories that are more interesting than others. For example, I find accident crimes
+less interesting than assault when it comes to content since an assault is more likely to garner
+attention than a regular car crash. Some of the categories makes it hard to summarize due to how their divided.
+For example, robbery is divided into 4 categories, which can make it difficult to actually get a total of robberies
+in PG County.
 
 ### Task 4: Calculating Averages
 
 Calculate the total number of incidents per month for each category using `mutate()`, calling the new column `total_incidents`. Then calculate the average number of incidents per month for each category of crime, calling the new column `average_incidents`. Assign the result to a new dataframe called `pg_crime_averages`.
 
 ```{r}
+pg_crime_averages <- pg_crime |> mutate(total_incidents = Jan + Feb + Mar + Apr 
+                                        + May + Jun + Jul + Aug + Sep + Oct + Nov + Dec) 
+
+#Hey! I put this code in because ROBBERY  RESIDENTIAL was giving me NA in the total_incidents column. 
+pg_crime_averages <- pg_crime |> 
+  mutate(total_incidents = rowSums(across(Jan:Dec), na.rm = TRUE))
+
+pg_crime_averages <- pg_crime_averages |> mutate(average_incidents = `total_incidents`/12)
 
 ```
 
@@ -36,27 +54,43 @@ Calculate the total number of incidents per month for each category using `mutat
 
 Examine the new dataframe, `pg_crime_averages`, by clicking on it in the Environment tab in RStudio. Write a couple of sentences describing the average number of incidents per month for each category. Which categories have the highest average number of incidents per month? Which have the lowest? What does this tell you about the pattern of crime in Prince George's County? Are there categories that you have questions about? Why or why not?
 
-ANSWER HERE
-
+The categories that has the highest average number of incidents per month are accident (481),
+auto stolen (399), theft from auto (391), and accident with impound (320). The categories 
+with the lowest is HOMICIDE, ROBBERY  RESIDENTIAL and B & E OTHER. 
+This tells me that the majority of crimes that occur in PG County are related to theft
+and robbery, (especially the ones related to automobiles). The one question I have is 
+what does B&E Other mean because it seems to broad of a name for a crime and needs specificity. 
 
 ### Task 6: Testing a Theory
 
 One theory about crime is that it is more likely to occur in the summer months. Test this theory by creating three new columns using `mutate()` that calculate the percentage change compared to the average for each category of crime for the months of June, July, and August. Call the new columns `june_change`, `july_change`, and `august_change`. Assign the result to a new dataframe called `summer_crime_averages`.
 
 ```{r}
+summer_crime_averages <- pg_crime_averages |> 
+  mutate(
+    june_change = ((Jun - average_incidents) / average_incidents) * 100,
+    july_change = ((Jul - average_incidents) / average_incidents) * 100,
+    august_change = ((Aug - average_incidents) / average_incidents) * 100
+  )
 ```
 
 ### Task 7: Describe the Summer Crime Averages
 
 Look at the `summer_crime_averages` dataframe by clicking on it in the Environment tab in RStudio. Write a couple of sentences describing the percentage change in the average number of incidents per month for each category of crime for the months of June, July, and August. Do you see any patterns? What does this tell you about the theory that crime is more likely to occur in the summer months?
 
-ANSWER HERE
+We see a pattern that some crimes do increase more compared to the average during
+the summer months. Overall, the dataset partially supports the theory that crimes rises in the summer, since some crimes like auto stolen, and theft from auto did show increases compared to the average, but not every single crime did have an increase on all 3 months.
 
 ### Task 8: What's the Story?
 
 Write up a lede and nutgraf of a story focused on the crime data in Prince George's County. It could be from any of the dataframes you've created in this assignment. The lede should be a single sentence that summarizes the most important information in the data. The nutgraf should be a paragraph that provides more context and explains why the data is important.
 
-ANSWER HERE
+Prince George's County saw nearly 400 incidents of auto-related thefts on average
+in 2024, according to data released from the police department.
+
+Auto-related crimes were among the top three crime incidents in Prince George's
+County in 2024. The rise in auto-theft coincides with the broader increase of
+auto thefts in Maryland. 
 
 ### Task 9: Save Your Work and Put it on GitHub
 
