--- a/activities/CarThefts.Rmd
+++ b/activities/CarThefts.Rmd
@@ -6,23 +6,53 @@ Follow along with the demo to learn how to calculate standard deviation and how 
 
 ### Task 1: Load the tidyverse
 
+```{r}
+library(tidyverse)
+```
+
 
 ### Task 2: Load the car thefts dataset from https://raw.githubusercontent.com/dwillis/jour405/refs/heads/main/data/car_thefts_jan24.csv
 
+```{r}
+car_theft <- read_csv("https://raw.githubusercontent.com/dwillis/jour405/refs/heads/main/data/car_thefts_jan24.csv")
+```
 
 ### Task 3: Calculate the standard deviation of the number of car thefts, along with the mean
 
+```{r}
+#The mean is 12.67 cars stolen (compared to what) The SD is 4.2. 
+# SD is measured of spread. Small deviation, means that its near the mean. 
+car_theft |> summarise(mean = mean(count), sd = sd(count))
+
+```
 
 ### Task 4: Create a histogram of the number of car thefts
 
+```{r}
+
+car_theft |> 
+  ggplot() + 
+  geom_histogram(aes(x = count), binwidth = 2) + 
+  geom_vline(xintercept = mean(count), color = "pink", linetype = "dashed", size = 1) + 
+  geom_vline(xintercept = mean(count)- sd(count), color = "purple", linetype = "dashed", size = 1)
+  
+
+```
+
 
 ### Task 5: Add a line to the histogram that shows the mean of the number of car thefts
+
+```{r}
+
+```
 
 
 ### Task 6: Describe your results
 
 Is the distribution normal or skewed in one direction? Write a sentence in which you describe the range of the data covered by one standard deviation from the mean on both sides.
 
-
+The data is slightly skewed to the right as we see on the chart. The range has 
+that a smaller portion to the left and then the right side has a larger portion
+of the car thefts. 
 
 When you are done, save your work, switch to GitHub Desktop, then add, commit and push your changes to GitHub and submit the URL of the notebook in ELMS.
