--- a/activities/Sampling.Rmd
+++ b/activities/Sampling.Rmd
@@ -6,23 +6,70 @@ Follow along with the demo to learn how to sample data from a population using R
 
 ### Task 1: Load the tidyverse
 
+```{r}
+library(tidyverse)
+```
+
 
 ### Task 2: Load 1,000 rows of data with the ages of people from 18-80
+
+```{r}
+
+set.seed(42)
+
+population <- tibble(
+  age = sample(18:80, 1000, replace = TRUE))
+
+head(population)
+
+```
 
 
 ### Task 3: Sample 100 rows of data from the dataset
 
+```{r}
+
+sample_100 <- population |>
+  sample_n(100)
+
+sample_50 <- population |>
+  sample_n(50)
+
+sample_10 <- population |>
+  sample_n(10)
+  
+```
+
 
 ### Task 4: Calculate the mean age and standard deviation of the sample
+
+```{r}
+sample_100 |> summarise(mean(age), sd(age))
+
+```
 
 
 ### Task 5: Calculate the mean age and standard deviation of the population
 
+```{r}
+
+population |> summarise(mean(age), sd(age))
+
+```
 
 ### Task 6: Compare the sample and population statistics
+```{r}
+
+sample_100 |> summarise(mean(age), sd(age))
+sample_50 |> summarise(mean(age), sd(age))
+sample_10 |> summarise(mean(age), sd(age))
+
+```
 
 Compare the means and standard deviations. Are they similar? Go back and re-run the sampling and statistics calculations with a smaller sample size. How do the results change?
 
-
+The results are similar for what the sample size of 50 and 100 and the actual population, while sample 10 is
+a little more skewed. The results changed only when the sample size became smaller, meaning that 
+as long as its a representative sample it doesn't need to be that big numbers wise.
 
 When finished, save your work, switch to GitHub Desktop, then add, commit and push your changes to GitHub and submit the URL of the notebook in ELMS.
